force-app/main/default/objects/NC_Lease__c/NC_Lease__c.object-meta.xml
<CustomObject>
    <label>Lease</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lease Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>