force-app/main/default/objects/NC_Lease__c/fields/Graduated_Commission__c.field-meta.xml
<CustomField>
    <fullName>Graduated_Commission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graduated Commission</label>
    <referenceTo>NC_Graduated_Commission__c</referenceTo>
    <relationshipLabel>Lease</relationshipLabel>
    <relationshipName>Lease</relationshipName>
    <type>Lookup</type>
</CustomField>