force-app/main/default/objects/NC_Lease__c/fields/L_Amount__c.field-meta.xml
<CustomField>
    <fullName>L_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>