force-app/main/default/objects/NC_Lease__c/fields/L_Earned__c.field-meta.xml
<CustomField>
    <fullName>L_Earned__c</fullName>
    <label>Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>