force-app/main/default/objects/NC_Lease__c/fields/L_End_Date__c.field-meta.xml
<CustomField>
    <fullName>L_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>