force-app/main/default/objects/NC_Lease__c/fields/L_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>L_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>