force-app/main/default/objects/NC_Lease__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <referenceTo>NC_Unit__c</referenceTo>
    <relationshipLabel>Lease</relationshipLabel>
    <relationshipName>Lease</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>