force-app/main/default/objects/NC_Lease__c/validationRules/OlderThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>OlderThanStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>L_Start_Date__c &gt;  L_End_Date__c</errorConditionFormula>
    <errorDisplayField>L_End_Date__c</errorDisplayField>
    <errorMessage>The End Date must be after Start Date</errorMessage>
</ValidationRule>