force-app/main/default/objects/NC_Lease__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>L_Amount__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>